# cephalopod

./: AUTHORS  README.md  configure.ac  meson.build
data/: cephalopod.appdata.xml.in  meson.build
data/ui/: about.ui.in  autorun.ui  connect.ui  desktop-pref.ui  meson.build  pref.ui
po/: LINGUAS  POTFILES
src/: app-config.c  app-config.h  desktop-ui.c  desktop.c  desktop.h  gseal-gtk-compat.h  main-win-ui.c  main-win.c  meson.build  pcmanfm.c  pcmanfm.h  pref.c  single-inst.c  tab-page.c  tab-page.h  volume-manager.c
